# droneai-clone-buddy

./: .env  index.html  mcp_client.py  package-lock.json  package.json  tailwind.config.cjs  vite.config.js  드론_연동_가이드.md
backend/: .env  .env.example  current_geo.py  drone_tools.py  final_extracted_text.txt  main.py  mcp_client.py  pyproject.toml  requirements.txt  temp.py  token_constants.py  ㅇㅇ
backend/agents/: ai_response.py  app.py  lm_response.py
backend/agents/models/: schemas.py
backend/agents/routers/: chat_router.py
backend/agents/services/: agent.py  agent_factory.py  streaming.py
backend/agents/tools/: search_tools.py
backend/agents/utils/: text_utils.py
backend/droneai_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: App.jsx  index.css
src/components/camera/: CameraControls.jsx
src/components/drone/: DroneControls.jsx  VoiceControl.jsx
src/components/map/: KakaoMap.jsx
src/components/ui/: Header.jsx  SystemLog.jsx
src/hooks/: index.js  useCameraState.js  useDroneState.js  useVoiceControl.js
templates/: response.jinja2  tool_chat_template_deepseekv3.jinja
